// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cell create 1`] = `
<div class="weui-cell">
  <div class="weui-cell_hd"></div>
  <div class="weui-cell__bd">
    <p></p>
  </div>
  <div class="weui-cell__ft"></div>
</div>
`;

exports[`cell handle click 1`] = `
<div class="weui-cell">
  <div class="weui-cell_hd"></div>
  <div class="weui-cell__bd">
    <p></p>
  </div>
  <div class="weui-cell__ft"></div>
</div>
`;

exports[`cell is-link 1`] = `
<div class="weui-cell weui-cell_access">
  <div class="weui-cell_hd"></div>
  <div class="weui-cell__bd">
    <p></p>
  </div>
  <div class="weui-cell__ft"></div>
</div>
`;
